<resources>
    <string name="app_name">8bitface</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>

    <string name="button_save">Save to&#8230;</string>
    <string name="button_load">Load</string>
    <string name="button_share">Share</string>

    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="textView_hat">Hat</string>
    <string name="textView_hat_number">01</string>

    <string name="textView_head">Head</string>
    <string name="textView_head_number">01</string>

    <string name="textView_body">Body</string>
    <string name="textView_body_number">01</string>

    <string name="help">Help!</string>
    <string name="title_activity_save">Save to...</string>
    <string name="title_activity_share">Share with...</string>

    <!-- Save Activity -->
    <string name="button_save_internal">Save to gallery</string>
    <!-- <string name="button_save_sd">Save to SD gallery</string> -->

    <!-- Share Activirty -->
    <string name="send_to">Send to:</string>
    <string name="button_share_again">Share again!</string>

    <!-- About dialog -->
    <string name="about_title">About</string>
    <string name="about_message">Author: Puzino Yury (puzino.y.a@gmail.com), 2017.</string>

    <!-- Help Dialog -->
    <string name="help_title">Help</string>
    <string name="help_message">Don\'t know what to do? \n
        \n
        Push "+" or "-" buttons and see how your avatar will change! \n
        \n
        If you want, you can SAVE your image to your gallery. \n
        \n
        And you can SHARE it with apps on your phone! \n
        \n
        Great, right? :)
    </string>

</resources>
