<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.puzino.a8bitface.MainFragment02Buttons"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/hat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="10"
        >

        <TextView
            android:id="@+id/textView_hat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_hat"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/decrease_hat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:gravity="center"
            android:layout_weight="2"
            />

        <TextView
            android:id="@+id/textView_hat_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_hat_number"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            />

        <Button
            android:id="@+id/increase_hat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:gravity="center"
            android:layout_weight="2"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="10"
        >

        <TextView
            android:id="@+id/textView_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_head"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/decrease_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:gravity="center"
            android:layout_weight="2"
            />

        <TextView
            android:id="@+id/textView_head_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_head_number"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            />

        <Button
            android:id="@+id/increase_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:gravity="center"
            android:layout_weight="2"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="10"
        >

        <TextView
            android:id="@+id/textView_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_body"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/decrease_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:gravity="center"
            android:layout_weight="2"
            />

        <TextView
            android:id="@+id/textView_body_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_body_number"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            />

        <Button
            android:id="@+id/increase_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:gravity="center"
            android:layout_weight="2"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/help"
        />

</LinearLayout>
</ScrollView>