<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.puzino.a8bitface.MainFragment01Image"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:orientation="horizontal"
    android:gravity="center_horizontal"
   >

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:onClick="onClickSaveTo"
            />

        <Button
            android:id="@+id/button_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_load"
            android:onClick="onClickLoadNumbers"
            />

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_share"
            android:onClick="onClickShare"
            />

</LinearLayout>

